--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Sushi</artifactId>
+    <artifactId>ht1.Sushi</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -26,5 +26,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
