--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-server</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.0.0-beta-4</version>
         </dependency>
